@@ -1,3 +1,13 @@
+2018-07-31  Myles C. Maxfield  <mmaxfield@apple.com>
+
+        [Cocoa] Addressing post-review comments on r234158
+        https://bugs.webkit.org/show_bug.cgi?id=188202
+
+        Reviewed by Darin Adler.
+
+        * platform/graphics/cocoa/FontCacheCoreText.cpp:
+        (WebCore::FontCache::lastResortFallbackFont):
+
 2018-07-31  John Wilander  <wilander@apple.com>
 
         Resource Load Statistics: Remove partitioned cookies for reduced complexity, lower memory footprint, and ability to support more platforms
